<resources>
    <string name="app_name">Weather</string>

    <string name="settings">Настройки</string>
    <string name="about_the_program">О программе</string>

    <string name="search_city">Поиск Города</string>
    <string name="additionally">Дополнительно</string>

    <string name="temp_recicler">Температура: %d °C</string>
    <string name="wind_recicler">Ветер:  %.1f</string>
    <string name="humidity_recicler">Влажность:  %.1f</string>

    <string name="delete">Удалить</string>
    <string name="this_is_my_house">Это мой дом</string>

    <string name="temp">%.0f °C</string>

    <string name="cloud">%.1f %</string>
    <string name="rain_or_snow_home">%.2f мм</string>
    <string name="pressure_home">%.1f</string>
    <string name="humidity_home">%.1f </string>
    <string name="wind_speed_value">%.1f км/ч </string>


    <string name="wind">Ветер</string>
    <string name="rain">Дождь</string>
    <string name="snow">Снег</string>
    <string name="wind_speed">Скорость ветра</string>
    <string name="humidity">Влажность</string>
    <string name="pressure">Давление</string>
    <string name="clouds">Осадки</string>

    <string name="change_location">Изменить местоположение</string>
    <string name="current_location">Текущее местоположение</string>
    <string name="search_locations">Поиск местоположения</string>

    <string name="forecast_01d">ясно</string>
    <string name="forecast_01n">ясно</string>
    <string name="forecast_02d">облачно с прояснениями</string>
    <string name="forecast_02n">облачно с прояснениями</string>
    <string name="forecast_03d">облачно</string>
    <string name="forecast_03n">облачно</string>
    <string name="forecast_04d">пасмурно</string>
    <string name="forecast_04n">пасмурно</string>
    <string name="forecast_09d">ливень</string>
    <string name="forecast_09n">ливень</string>
    <string name="forecast_10d">дождь</string>
    <string name="forecast_10n">дождь</string>
    <string name="forecast_11d">гроза</string>
    <string name="forecast_11n">гроза</string>
    <string name="forecast_13d">снег</string>
    <string name="forecast_13n">снег</string>
    <string name="forecast_50d">туман</string>
    <string name="forecast_50n">туман</string>
    <string name="no_internet_connection">Нет подключения к интернету</string>
    <string name="enter_the_city">Введите город</string>
    <string name="for_example_Minsk">Например, Минск</string>
    <string name="Automatic_positioning">Автоматическое определение местоположения</string>
    <string name="automatic_detection">Автоматически определите ваше текущее местоположения</string>

</resources>
