<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/toolbar" />

    <FrameLayout
        android:id="@+id/fameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_toolbar">

        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linerLayoutTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fameLayout"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/tvTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="7°"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvCloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clouds"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvCloudValues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="51%"
            android:textAlignment="center"
            android:textSize="25sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linerLayoutTemp"
        android:text="Ливни"
        android:textAlignment="center"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/liner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDescription"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rain"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wind"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Точка росы"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/liner1">

        <TextView
            android:id="@+id/tvRainValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1,0 мм"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvWindValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="3C3"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvDewPointValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="4°"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/liner2"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/snow"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wind_speed"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/humidity"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/liner3">

        <TextView
            android:id="@+id/tvSnowValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0,0 см"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvWindSpeedValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="13км/ч"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvHumidityValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="82%"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/liner4"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Изморозь"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wind_guest"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="УФ-индекс"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/liner5">

        <TextView
            android:id="@+id/tvRimeValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0,0 мм"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvWindGuestValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="15км/ч"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvUVIndexValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Нет"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>